--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,23 +1,69 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container">
-		<a class="navbar-brand" href="#">Navbar</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark elegant-color-dark fixed-top">
+    <div class="container">
+		<a class="navbar-brand" href="#">News App</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav" aria-controls="basicExampleNav"
+			aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<form class="form-inline my-2 my-lg-0 ml-auto">
-				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" ng-model="searchval">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+		<div class="collapse navbar-collapse" id="basicExampleNav">
+			<form class="form-inline ml-auto">
+				<div class="md-form my-0">
+					<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" ng-model="searchval">
+				</div>
 			</form>
 		</div>
 	</div>
 </nav>
 
-<div class="container mt-3">
-	<div class="col-md-12 col-lg-12 box-wrapper">
-		<ul class="list-group">
-			<li class="list-group-item mt-1 mb-1" ng-repeat="item in list | filter:{title: searchval,completed:false }">{{ item.title }}</li>
-		</ul>
+<section class="my-5 container">
+	<h2 class="h1-responsive font-weight-bold text-center my-5 pt-3">Search worldwide news with code</h2>
+	<p class="text-center text-large w-responsive mx-auto mb-5">Get breaking news headlines, and search for articles from over 30,000 news sources and blogs with our news API</p>
+	<div class="row m-2 border p-2 rounded" ng-repeat="item in list | filter:{title: searchval }">
+	  <div class="col-lg-5">
+		<div class="view overlay rounded z-depth-2 mb-lg-0 mb-4">
+		  <img class="img-fluid" src="{{item.urlToImage}}" alt="Sample image">
+		  <a>
+			<div class="mask rgba-white-slight"></div>
+		  </a>
+		</div>
+	  </div>
+	  <div class="col-lg-7">
+		<h3 class="font-weight-bold mb-3" ><strong>{{item.title}}</strong></h3>
+		<p>{{item.description}}</p>
+		<p>by <a><strong>{{item.author}}</strong></a>{{item.publishedAt.moment().format("MMM")}}</p>
+		<a class="btn elegant-color-dark text-white btn-md" href="{{item.url}}">Read more</a>
+	  </div>
 	</div>
-</div>
+	<hr class="my-5">
+  </section>
+<footer class="page-footer font-small elegant-color-dark darken-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 py-5">
+          <div class="mb-5 flex-center">
+            <a class="fb-ic">
+              <i class="fa fa-facebook fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <a class="tw-ic">
+              <i class="fa fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <a class="gplus-ic">
+              <i class="fa fa-google-plus fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <a class="li-ic">
+              <i class="fa fa-linkedin fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <a class="ins-ic">
+              <i class="fa fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
+            </a>
+            <a class="pin-ic">
+              <i class="fa fa-pinterest fa-lg white-text fa-2x"> </i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+      <a href="https://mdbootstrap.com/bootstrap-tutorial/"> MDBootstrap.com</a>
+    </div>
+  </footer>
