--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,7 +6,14 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="basicExampleNav">
-			<form class="form-inline ml-auto">
+
+        <ul class="navbar-nav mr-auto">
+            <li ng-repeat="item in category" class="nav-item {{initialCategory === item ? active : null}}">
+                <a class="nav-link" ng-click="handleClick(item)">{{item}}</a>
+            </li>
+        </ul>
+
+			<form class="form-inline ml-auto" ng-submit="handleSearch()">
 				<div class="md-form my-0">
 					<input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" ng-model="searchval">
 				</div>
@@ -16,7 +23,8 @@
 </nav>
 
 <section class="my-5 container">
-	<h2 class="h1-responsive font-weight-bold text-center my-5 pt-3">Search worldwide news with code</h2>
+  <h2 class="h1-responsive font-weight-bold text-center my-5 pt-3">Search worldwide news with code</h2>
+	<h3 class="font-weight-bold text-center">{{initialVal2}}</h3>  
 	<p class="text-center text-large w-responsive mx-auto mb-5">Get breaking news headlines, and search for articles from over 30,000 news sources and blogs with our news API</p>
 	<div class="row m-2 border p-2 rounded" ng-repeat="item in list | filter:{title: searchval }">
 	  <div class="col-lg-5">
